# NEMO-MQTT-Plugin

./: .gitignore  CHANGELOG.md  CHANGES.md  DEVELOPMENT.md  INSTALLATION.md  INSTALLATION_COMPLETE.md  LICENSE  MANIFEST.in  MODE_EXPLANATION.md  NEMO_CE_SETUP_CHECKLIST.md  PACKAGING_COMPLIANCE.md  PRODUCTION_READY_TLS_SETUP.md  PRODUCTION_READY_TLS_SIMPLE.md  README.md  SECURE_FILE_PATH_SETUP.md  SECURITY_ANALYSIS.md  SHIPPING_CHECKLIST.md  check_bridge_status.py  comprehensive_flow_monitor.py  debug_tls.py  dev_reinstall.sh  direct_mqtt_publisher.py  dump.rdb  fix_ca_certificate.py  install_nemo_integration.py  install_standalone.py  monitor_messages.py  monitor_requirements.txt  production_standalone_mqtt.py  pyproject.toml  requirements.txt  requirements_simple.txt  run_tests.py  setup.py  setup_nemo_integration.sh  simple_mqtt_subscriber.py  simple_standalone_mqtt.py  simple_test.py  standalone_mqtt_service.py  start_comprehensive_monitor.sh  (+6 more)
.github/workflows/: ci.yml
docs/: HMAC.md  TLS.md
nemo_mqtt/: __init__.py  admin.py  apps.py  auto_mqtt_service.py  connection_manager.py  customization.py  external_mqtt_service.py  health_monitor.py  models.py  mqtt_client.py  mqtt_requirements.txt  redis_mqtt_bridge.py  redis_publisher.py  requirements.txt  signals.py  simple_standalone_mqtt.py  start_mqtt_service.py  test_mqtt.py  urls.py  utils.py  views.py
nemo_mqtt/bridge/: auto_services.py  mqtt_connection.py
nemo_mqtt/management/commands/: install_mqtt_plugin.py  setup_nemo_integration.py  test_mqtt_api.py
nemo_mqtt/migrations/: 0001_initial.py  0002_mqttconfiguration_ca_cert_content_and_more.py  0003_add_server_certificates.py  0004_remove_server_cert_content.py  0005_simplify_tls_config.py  0006_rename_db_tables_to_lowercase.py  0007_replace_tls_with_hmac.py
nemo_mqtt/monitoring/: README.md  mqtt_monitor.py  redis_checker.py  run_monitor.py
nemo_mqtt/templates/NEMO_mqtt/: monitor.html
nemo_mqtt/templates/customizations/: customizations_mqtt.html
nemo_mqtt_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: check_bridge_status.py  clean.sh  cleanup_mqtt.sh  debug_hmac.py  debug_tls.py  fix_ca_certificate.py  format.sh  lint.sh  monitor_services.sh  test.sh
src/nemo_mqtt/: admin.py  apps.py  customization.py  redis_publisher.py  signals.py  urls.py  utils.py
src/nemo_mqtt/bridge/: auto_services.py  (+2 more)
tests/: __init__.py  conftest.py  conftest_simple.py  simple_test.py  test_api.py  test_apps.py  test_direct_mqtt.py  test_flow.py  test_message_flow.py  test_models.py  test_monitor_api.py  test_monitor_messages.py  test_redis_mqtt_bridge.py  test_redis_publisher.py  test_settings.py  test_signals.py  test_simple.py  test_views.py
(+3 files in other folders)
